tests/paczka1/small_fuzzy/41567910.err
Error in line 4: wkoieSn8aZ S621 67,9
Error in line 6: A220 A62 60,1
